--- a/solutions/solutions.Rmd
+++ b/solutions/solutions.Rmd
@@ -101,7 +101,7 @@ bird_stats <- animals %>%
 Add a column to the gapminder dataset that contains the continent's total population of each observation in a given year. For example, if the first observation was Afghanistan in 1952, the new column would contain the population of Asia in 1952. 
 
 ```{r}
-gapminder <- gapminder %>% 
+gapminder_c6 <- gapminder %>% 
   group_by(continent, year) %>% 
   mutate(continent_pop = sum(pop))
 ``` 
@@ -112,7 +112,7 @@ gapminder <- gapminder %>%
 Use dplyr to: (a) add a column called `gdpPercap_diff` that contains the difference between the observation's `gdpPercap` and the mean `gdpPercap` of the continent in that year, (b) arrange the data frame by the column you just created, in descending order (so that the relatively richest country/years are listed first)
 
 ```{r}
-gapminder_gdpPercap_diff <- gapminder %>%  
+gapminder_gdpPercap_diff <- gapminder_c6 %>%  
   group_by(continent, year) %>% 
    mutate(mean_continent_gdp = mean(gdpPercap),
           gdpPercap_diff = gdpPercap - mean_continent_gdp) %>% 
@@ -126,7 +126,7 @@ gapminder_gdpPercap_diff <- gapminder %>%
 
 ```{r}
 ## Starter code 
-gapminder_gdpPercap_diff <- gapminder %>%  
+gapminder_gdpPercap_diff <- gapminder_c6 %>%  
   group_by(continent, year) %>% 
    mutate(mean_continent_gdp = mean(gdpPercap),
           gdpPercap_diff = gdpPercap - mean_continent_gdp)
@@ -159,14 +159,14 @@ The IGS poll also contains a question broken down by region (`cal_region.csv`). 
 ## Full pipe here 
 read_csv(here("data/cal_region.csv"))%>% 
   pivot_longer(-leaving, 
-               names_to = "age", 
+               names_to = "region", 
                values_to = "percent_agreement")%>% 
-  ggplot(aes(x = leaving, y = percent_agreement, fill=age))+
+  ggplot(aes(x = leaving, y = percent_agreement, fill=region))+
   geom_col(position = 'dodge')+
   xlab("Moving Consideration Level")+
   ylab("Percent Agreement")+
   scale_fill_discrete(type = "viridis")+
-  ggtitle("Californians Consideration to Leaving the State")
+  ggtitle("Californians Consideration to Leaving the State by Region")
 
 ```
 
@@ -185,6 +185,30 @@ birds %>%
   separate(sight, c("type", "location"),sep = 5)%>%
   mutate(type = str_replace_all(type, "warbl", "warbler")%>%str_to_title(),
          location = if_else(str_detect(location, "Ne"), "Nest", "Air"))
+
+### Here's a way using base string function 
+birds %>% 
+  pivot_longer(!c(county,year), 
+               names_to = "sight",
+               values_to = "n",
+               values_drop_na = TRUE)%>%
+  separate(sight, c("type", "location"),sep = 5)%>%
+  mutate(type = if_else(grepl("w", type, ignore.case = TRUE), "Warbler", "Eagle"),
+         location = if_else(grepl("Ne", location), "Nest", "Air"))
+
+### Here's another brute force way 
+birds %>%
+  pivot_longer(!c(county,year), 
+               names_to = "sight",
+               values_to = "n",
+               values_drop_na = TRUE)%>%
+  separate(sight, c("type", "location"),sep = 5)%>%
+  mutate(type = if_else(str_starts(type, "w"), "Warbler", "Eagle"),
+         location = case_when(
+           str_detect(location, "ir")~"Air",
+           str_detect(location, "Ne")~"Nest",
+           TRUE ~ location
+         ))
 ```
 
 
