--- a/solutions/solutions.Rmd
+++ b/solutions/solutions.Rmd
@@ -60,7 +60,7 @@ long
 Create a new data frame object called `cats_and_dogs` that filters the `animals` data frame for all observations for which the animal type is a cat or a dog. Use the pipe operator to chain the functions together. 
 
 ```{r}
-cats_and_dogs <- animals %>% 
+cats_and_dogs <- animals |> 
   filter(Type == "Cat"|Type == "Dog")
 ```
   
@@ -70,10 +70,10 @@ Let's put the verbs we've learned so far into action all at once. Answer the que
 
 ```{r}
 ## Your Code here 
-borough_dog_rescues <- animals %>% 
-  group_by(Borough)%>%
-  filter(Type == "Dog")%>%
-  count(Type)%>%
+borough_dog_rescues <- animals |> 
+  group_by(Borough) |>
+  filter(Type == "Dog") |>
+  count(Type) |>
   arrange(Borough)
 
 ```
@@ -85,9 +85,9 @@ Create a data frame that considers the average rescue cost, median rescue cost, 
 
 ```{r, include=F}
 #YOUR CODE HERE
-bird_stats <- animals %>% 
-  group_by(PropertyCategory, Year)%>%
-  filter(Type == "Bird")%>%
+bird_stats <- animals |> 
+  group_by(PropertyCategory, Year) |>
+  filter(Type == "Bird") |>
   summarise(median_cost = median(RescueCost, na.rm = T),
             avg_cost = mean(RescueCost, na.rm = T), 
             sd_cost = sd(RescueCost, na.rm = T),
@@ -101,8 +101,8 @@ bird_stats <- animals %>%
 Add a column to the gapminder dataset that contains the continent's total population of each observation in a given year. For example, if the first observation was Afghanistan in 1952, the new column would contain the population of Asia in 1952. 
 
 ```{r}
-gapminder_c6 <- gapminder %>% 
-  group_by(continent, year) %>% 
+gapminder_c6 <- gapminder |> 
+  group_by(continent, year) |> 
   mutate(continent_pop = sum(pop))
 ``` 
 
@@ -112,10 +112,10 @@ gapminder_c6 <- gapminder %>%
 Use dplyr to: (a) add a column called `gdpPercap_diff` that contains the difference between the observation's `gdpPercap` and the mean `gdpPercap` of the continent in that year, (b) arrange the data frame by the column you just created, in descending order (so that the relatively richest country/years are listed first)
 
 ```{r}
-gapminder_gdpPercap_diff <- gapminder_c6 %>%  
-  group_by(continent, year) %>% 
+gapminder_gdpPercap_diff <- gapminder_c6 |>  
+  group_by(continent, year) |> 
    mutate(mean_continent_gdp = mean(gdpPercap),
-          gdpPercap_diff = gdpPercap - mean_continent_gdp) %>% 
+          gdpPercap_diff = gdpPercap - mean_continent_gdp) |> 
   arrange(desc(gdpPercap_diff))
 ```
   
@@ -126,14 +126,14 @@ gapminder_gdpPercap_diff <- gapminder_c6 %>%
 
 ```{r}
 ## Starter code 
-gapminder_gdpPercap_diff <- gapminder_c6 %>%  
-  group_by(continent, year) %>% 
+gapminder_gdpPercap_diff <- gapminder_c6 |>  
+  group_by(continent, year) |> 
    mutate(mean_continent_gdp = mean(gdpPercap),
           gdpPercap_diff = gdpPercap - mean_continent_gdp)
 
-gapminder_wide <- gapminder_gdpPercap_diff %>% 
-  ungroup() %>% 
-  select(country, year, gdpPercap_diff) %>% 
+gapminder_wide <- gapminder_gdpPercap_diff |> 
+  ungroup() |> 
+  select(country, year, gdpPercap_diff) |> 
   pivot_wider(
     names_from = year,
     values_from = gdpPercap_diff
@@ -143,7 +143,7 @@ gapminder_wide <- gapminder_gdpPercap_diff %>%
 2. Now, turn the data frame above back into the long format with three columns: `country`, `year`, and `gdpPercap_diff`.
 
 ```{r}
-gapminder_long <- gapminder_wide %>% 
+gapminder_long <- gapminder_wide |> 
   pivot_longer(
     cols = c(-country),
     names_to = "year",
@@ -157,10 +157,10 @@ The IGS poll also contains a question broken down by region (`cal_region.csv`). 
 
 ```{r}
 ## Full pipe here 
-read_csv(here("data/cal_region.csv"))%>% 
+read_csv(here("data/cal_region.csv")) |> 
   pivot_longer(-leaving, 
                names_to = "region", 
-               values_to = "percent_agreement")%>% 
+               values_to = "percent_agreement") |> 
   ggplot(aes(x = leaving, y = percent_agreement, fill=region))+
   geom_col(position = 'dodge')+
   xlab("Moving Consideration Level")+
@@ -177,32 +177,32 @@ Edit the workflow presented above to split on the fifth character. Use `mutate` 
 ```{r}
 ## Here's a solution that takes advantage of stringr capabilities
 ## There are multiple ways to solve this problem
-birds %>% 
+birds |> 
   pivot_longer(!c(county,year), 
                names_to = "sight",
                values_to = "n",
-               values_drop_na = TRUE)%>%
-  separate(sight, c("type", "location"),sep = 5)%>%
-  mutate(type = str_replace_all(type, "warbl", "warbler")%>%str_to_title(),
+               values_drop_na = TRUE) |>
+  separate(sight, c("type", "location"),sep = 5) |>
+  mutate(type = str_replace_all(type, "warbl", "warbler")|>str_to_title(),
          location = if_else(str_detect(location, "Ne"), "Nest", "Air"))
 
 ### Here's a way using base string function 
-birds %>% 
+birds |> 
   pivot_longer(!c(county,year), 
                names_to = "sight",
                values_to = "n",
-               values_drop_na = TRUE)%>%
-  separate(sight, c("type", "location"),sep = 5)%>%
+               values_drop_na = TRUE) |>
+  separate(sight, c("type", "location"),sep = 5) |>
   mutate(type = if_else(grepl("w", type, ignore.case = TRUE), "Warbler", "Eagle"),
          location = if_else(grepl("Ne", location), "Nest", "Air"))
 
 ### Here's another brute force way 
-birds %>%
+birds |>
   pivot_longer(!c(county,year), 
                names_to = "sight",
                values_to = "n",
-               values_drop_na = TRUE)%>%
-  separate(sight, c("type", "location"),sep = 5)%>%
+               values_drop_na = TRUE) |>
+  separate(sight, c("type", "location"),sep = 5) |>
   mutate(type = if_else(str_starts(type, "w"), "Warbler", "Eagle"),
          location = case_when(
            str_detect(location, "ir")~"Air",
@@ -243,15 +243,15 @@ Here we have a problem of updating several variables based on a set of potential
 Build a workflow that converts the incorrect answers to correct answers. A solution to this problem makes use of `left_join()`, `mutate()`, `select()`, and both `pivot_longer()` and `pivot_wider()`
 
 ```{r}
-corrected_data <- survey_raw_data %>% 
+corrected_data <- survey_raw_data |> 
   pivot_longer(cols = -ID,
                names_to = "var_name",
-               values_to = "original_value")%>%
-  left_join(fixes, by = c("ID", "var_name" = "original_var"))%>%
+               values_to = "original_value") |>
+  left_join(fixes, by = c("ID", "var_name" = "original_var")) |>
   mutate(corrected_value = if_else(is.na(original_response),
                                    original_value,
-                                   correct_response))%>%
-  select(-original_value, -correct_response, -original_response)%>%
+                                   correct_response)) |>
+  select(-original_value, -correct_response, -original_response) |>
   pivot_wider(names_from = "var_name",
               values_from = "corrected_value")
   
@@ -264,9 +264,9 @@ In the data folder, there is a sub-directory called penguins. This directory spl
 
 ```{r}
 ## Get files
-files <- fs::dir_ls(path = "data/penguins", glob = "*species*csv")
+files <- fs::dir_ls(path = here("data/penguins"), glob = "*species_*.csv")
 
 ## Combine data frames 
-penguins_df <- files %>% 
-  read_csv(id = "path")
+penguins_df <- files |> 
+  read_csv(id = "path", show_col_types = FALSE)
 ```
