--- a/solutions/solutions.Rmd
+++ b/solutions/solutions.Rmd
@@ -217,6 +217,7 @@ birds |>
 Suppose you have a survey 
 
 ```{r}
+set.seed(1234)
 survey_raw_data <-tibble(
   ID = LETTERS[1:15],
   var1 = sample(1:15, replace = F),
@@ -230,7 +231,7 @@ Survey data is likely to contain errors. Perhaps the enumerators filled in a que
 
 ```{r}
 fixes <- tibble(
-  ID = c("A", "D", "F", "G"),
+  ID = c("O", "G", "D", "D"),
   original_var = c("var1", "var2", "var2", "var3"),
   original_response = as.integer(c(1, 28, 19, 34)),
   correct_response = as.integer(c(1000, 2800, 1900, 3400))
